Prevent advanced search indexing exceptions due to null data - CLM-37684 (#15168)